# stackelberg-games

./: .gitignore  .readthedocs.yaml  README.md  noxfile.py  requirements-dev.txt  requirements-docs.txt  requirements.txt
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/contributing/: common_tasks.rst  contributing.rst  plgrid.rst  setup.rst
docs/experimenting/: experimenting.rst
docs/stackelberg-games-core/: index.rst
docs/stackelberg-games-patrolling/: index.rst
docs/whitepaper/: index.rst  references.bib  references.rst
stackelberg-games-core/: LICENSE  README.md  pyproject.toml
stackelberg-games-core/src/stackelberg_games/core/: __init__.py  linalg.py  minksum.py  polyhedra.py
stackelberg-games-core/src/stackelberg_games/core/algorithms/: dobss.py  dots.py  multiple_lps.py  objectives.py
stackelberg-games-core/src/stackelberg_games/core/games/: bayesian.py  game.py  generalized.py  normal_form.py
stackelberg-games-core/src/stackelberg_games/core/generators/: armor.py  chemplant.py  circulant.py  file_reader.py  generator.py  random_binary.py  random_correlated.py  random_independent.py  singleton.py
stackelberg-games-core/src/stackelberg_games/core/mpi/: runner.py
stackelberg-games-core/src/stackelberg_games/core/plotting/: inducible_actions.py  payoff.py
stackelberg-games-core/tests/: test_bayesian.py  test_dobss.py  test_generator_metadata.py  test_protocols.py  test_repr.py  test_serialization.py
stackelberg-games-patrolling/: README.md  pyproject.toml
stackelberg-games-patrolling/scripts/: gdynia_diagram.py  sgp_animate_schedules.py  sgp_compute_schedules.py  sgp_cycle_graph.py  sgp_star_graph.py  uai_figures.py  uai_gdynia_diagram.py  uai_monte_carlo_experiments.py  uai_random_experiments.py
stackelberg-games-patrolling/src/stackelberg_games/patrolling/: __init__.py  animate.py  bisect_solver.py  directories.py  mts.py  plan.py  problem.py  problem_instances.py  pwl.py  schedule.py  setting.py  solver.py  space.py
stackelberg-games-patrolling/tests/: test_pwl.py  test_setting.py
