[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "stackelberg_games.patrolling"
authors = [
    { name="Andrzej Nagórko", email="amn@mimuw.edu.pl" },
    { name="Marcin Waniek", email="" },
]
description = "Patrolling games"
license.file = "LICENSE"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "appdirs",
    "cartopy",
    "datamodel-code-generator",
    "geopy",
    "haversine",
    "jsbeautifier",
    "manim",
    "netgraph",
    "networkx",
    "owslib",
    "pandas",
    "pydantic",
    "pyscipopt",
    "scipy",
    "seaborn",
    "shapely",
    "termcolor",
    "types-networkx"
]


[project.optional-dependencies]
test = [
    "jinja2",
    "pytest",
    "pytest-cov"
]
dev = [
    "jinja2",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/anagorko/stackelberg-games"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/stackelberg_games/patrolling/_version.py"
build.targets.wheel.packages = ["src/stackelberg_games"]
version.raw-options.write_to = "stackelberg-games-patrolling/src/stackelberg_games/patrolling/_version.py"
version.raw-options.root = ".."

[tool.hatch.build.targets.wheel.force-include]
"scripts/" = "stackelberg_games/patrolling/scripts/"

[tool.pytest.ini_options]
cache_dir="../.pytest_cache"

[project.scripts]
sgp_star_graph="stackelberg_games.patrolling.scripts.sgp_star_graph:main"
sgp_animate_schedules="stackelberg_games.patrolling.scripts.sgp_animate_schedules:main"
sgp_compute_schedules="stackelberg_games.patrolling.scripts.sgp_compute_schedules:main"
sgp_cycle_graph="stackelberg_games.patrolling.scripts.sgp_cycle_graph:main"
uai_gdynia_diagram="stackelberg_games.patrolling.scripts.uai_gdynia_diagram:main"
